# SuperSS-Dev

./: .gitignore  CLAUDE.md  Cargo.toml  HANDOFF-COURSE-GRAYED.md  README-PORT.md  README.md  clippy.toml  docker-compose.yml
.github/workflows/: ci.yml
Server Lib/Game Server/GAME/: channel.cpp  channel.h  game.cpp  game.hpp  room.h
Server Lib/Game Server/Game Server/: game_server.cpp  game_server.h
Server Lib/Game Server/PACKET/: packet_func_sv.cpp  packet_func_sv.h
Server Lib/Game Server/PANGYA_DB/: cmd_get_notice_queue.cpp  cmd_get_notice_queue.hpp
Server Lib/Linux Builds/: Makefile-as.mk  Makefile-gs.mk  Makefile-ls.mk  Makefile-ms.mk  Makefile-rs.mk
Server Lib/Node/Smart-Calculator-Bot/: package-lock.json  package.json
Server Lib/Projeto IOCP/Server/: server.cpp  server.h
Server Lib/Projeto IOCP/UTIL/: packet_logger.h
crates/pangya-config/: Cargo.toml
crates/pangya-config/src/: error.rs  lib.rs
crates/pangya-config/tests/fixtures/: server-auth.ini  server-game.ini  server-login.ini
crates/pangya-db/: Cargo.toml
crates/pangya-db/src/: lib.rs  pool.rs  repos.rs
crates/pangya-iff/: Cargo.toml
crates/pangya-iff/src/: error.rs  lib.rs  records.rs
crates/pangya-model/: Cargo.toml
crates/pangya-model/src/: account.rs  auth.rs  channel.rs  lib.rs  player.rs  server_list.rs
crates/pangya-net/: Cargo.toml
crates/pangya-net/src/: codec.rs  compress.rs  crypt.rs  framing.rs  key_dictionary.rs  lib.rs  size_codec.rs
crates/pangya-patch/: Cargo.toml
crates/pangya-patch/src/: lib.rs
crates/pangya-proto/: Cargo.toml
crates/pangya-proto/src/: game.rs  game_resp.rs  lib.rs  login.rs  login_resp.rs
crates/pangya-proto/tests/: captured_vectors.rs
crates/pangya-proto/tests/fixtures/: captured_packets.json  character_info_capture.hex  player_room_info_capture.hex
crates/pangya-server-core/: Cargo.toml
crates/pangya-server-core/src/: dispatch.rs  game_login.rs  gm.rs  lib.rs  login.rs  packet_log.rs  runtime.rs  server.rs  session.rs
crates/pangya-server-core/tests/: login_db.rs
migrations/: 0001_init.sql  0002_character_information.sql  0003_equipment.sql  0004_currency.sql  0005_iff_items.sql
reference-cpp/: bk-squema-mysql.sql
reference-cpp/Server Lib/Game Server/GAME/: match.cpp  match.hpp  room.cpp
reference-cpp/Server Lib/Game Server/Game Server/: game_server.h
reference-cpp/Server Lib/Linux Builds/: Makefile-ls.mk  Makefile-ms.mk
reference-cpp/Server Lib/Message Server/Message Server/: message_server.cpp
run/: auth.ini  game.ini  login.ini  start-servers.sh  stop-servers.sh
