[workspace]
resolver = "2"
members = [
    "crates/pangya-config",
    "crates/pangya-net",
    "crates/pangya-iff",
    "crates/pangya-proto",
    "crates/pangya-db",
    "crates/pangya-model",
    "crates/pangya-server-core",
    "bin/auth-server",
    "bin/login-server",
    "bin/game-server",
    "bin/rank-server",
    "bin/message-server",
    "bin/gg-auth-server",
    "bin/iff-import",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.81"

[workspace.dependencies]
# async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"
futures = "0.3"

# logging / telemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# error handling
thiserror = "2"
anyhow = "1"

# config
rust-ini = "0.21"

# binary protocol
binrw = "0.15"

# database
# tls-native-tls binds the system OpenSSL (fast, already present on the dev
# host) instead of compiling `ring`/`rustls` from source, which took 10+ minutes
# on first build. Switch to tls-rustls in release if a pure-static binary is
# later preferred.
sqlx = { version = "0.9", default-features = false, features = [
    "runtime-tokio",
    "tls-native-tls",
    "mysql",
    "macros",
    "migrate",
] }

# data
# Minimal features: Pangya IFF archives use plain DEFLATE; disable bzip2/zstd/
# deflate64/etc. (zstd-sys alone compiles for 10+ minutes) unless needed later.
zip = { version = "2", default-features = false, features = ["deflate"] }

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# misc
once_cell = "1"
dashmap = "6"
md-5 = "0.10"
hex = "0.4"
rand = "0.8"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
